2026-01-03T02:06:09Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/20670720831 # 858
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2026-01-03
* notice: last 14d: unq all: 2 2
* notice: prev accum: outdated-unq outdated-all / unq all: 209 276 / 211 278
* notice: next accum: outdated-unq outdated-all / unq all: 209 276 / 211 278
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-12-15] / []

2026-01-02T02:18:42Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/20649377219 # 857
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2026-01-02
* notice: last 14d: unq all: 2 2
* notice: prev accum: outdated-unq outdated-all / unq all: 209 276 / 211 278
* notice: next accum: outdated-unq outdated-all / unq all: 209 276 / 211 278
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [] / []

2025-12-31T02:11:00Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/20610310880 # 855
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-31
* notice: last 14d: unq all: 2 2
* notice: prev accum: outdated-unq outdated-all / unq all: 209 276 / 211 278
* notice: next accum: outdated-unq outdated-all / unq all: 209 276 / 211 278
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [] / []

2025-12-27T02:06:46Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/20532881249 # 851